# OpenDMARC

./: .gitignore  Makefile.am  RELEASE_NOTES  announcement  configure.ac
db/: README.schema  schema.mysql
docs/: README.specs.html
libopendmarc/: Makefile.am  opendmarc_dns.c  opendmarc_hash.c  opendmarc_internal.h  opendmarc_policy.c  opendmarc_tld.c
opendmarc/: Makefile.am  opendmarc-ar.h  opendmarc-arcares.c  opendmarc-arcseal.c  opendmarc-config.h  opendmarc.8.in  opendmarc.c  opendmarc.conf.5.in  opendmarc.conf.sample
reports/: opendmarc-expire.in  opendmarc-import.in  opendmarc-importstats.in
